# binja-codemode-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/binja_codemode_mcp/: __init__.py  _bnpm_runtime.py  executor.py  gateway.py  server.py  session.py  settings.py  worker.py
src/binja_codemode_mcp/transports/: __init__.py  http.py  stdio.py
