[project]
name = "binja-codemode-mcp"
version = "0.1.0"
description = "A codemode MCP for Binary Ninja."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastmcp>=2.0"]

[project.scripts]
gateway = "binja_codemode_mcp.gateway:main"
serve = "binja_codemode_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/binja_codemode_mcp"]
